si4703 - Adding tuner and fram drivers
This patch adds the si4703 and fram drivers to the linux
kernel.

--- a/arch/arm64/configs/bcmrpi3_defconfig
+++ b/arch/arm64/configs/bcmrpi3_defconfig
@@ -778,6 +778,9 @@ CONFIG_RADIO_SI470X=y
 CONFIG_USB_SI470X=m
 CONFIG_I2C_SI470X=m
 CONFIG_RADIO_SI4713=m
+CONFIG_I2C_SI4703=m
+CONFIG_RADIO_SI4703=m
+CONFIG_SPI_FRAM=m
 CONFIG_I2C_SI4713=m
 CONFIG_USB_MR800=m
 CONFIG_USB_DSBR=m
