--- a/arch/arm/configs/bcm2709_defconfig
+++ b/arch/arm/configs/bcm2709_defconfig
@@ -820,6 +820,9 @@ CONFIG_USB_SI470X=m
 CONFIG_I2C_SI470X=m
 CONFIG_RADIO_SI4713=m
 CONFIG_I2C_SI4713=m
+CONFIG_RADIO_SI4703=m
+CONFIG_I2C_SI4703=m
+CONFIG_SPI_FRAM=m
 CONFIG_USB_MR800=m
 CONFIG_USB_DSBR=m
 CONFIG_RADIO_SHARK=m
