--- a/arch/arm/configs/bcmrpi_defconfig
+++ b/arch/arm/configs/bcmrpi_defconfig
@@ -811,6 +811,9 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_RADIO_SI470X=y
 CONFIG_USB_SI470X=m
 CONFIG_I2C_SI470X=m
+CONFIG_RADIO_SI4703=m
+CONFIG_I2C_SI4703=m
+CONFIG_SPI_FRAM=m
 CONFIG_RADIO_SI4713=m
 CONFIG_I2C_SI4713=m
 CONFIG_USB_MR800=m
